--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="header"> willschusterwarcriminal.com</h1>
 
 
-    <iframe  width="320" height="240" src="https://www.youtube.com/embed/0_X3QFe6J40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen controls autoplay class="video"></iframe>
+    <iframe  width="320" height="240" src="https://www.youtube.com/embed/0_X3QFe6J40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  controls autoplay class="video"></iframe>
 
      <a href="cell.html" class="cell">GO TO CELL</a>
      <a href="hell.html" class="hell">GO TO HELL</a>
