--- a/cell.html
+++ b/cell.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
     <head>
-        <link rel="stylesheet" href="cellstyle.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1 ,user-scalable=no">
+      <link rel="stylesheet" href="cellstyle.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     </head>
 
