--- a/hell.html
+++ b/hell.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
     <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1 ,user-scalable=no">
         <link rel="stylesheet" href="hellstyle.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
