--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <h1 class="header"> willschusterwarcriminal.com</h1>
 
-
-    <iframe  width="320" height="240" src="https://www.youtube.com/embed/0_X3QFe6J40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"  controls autoplay class="video"></iframe>
+    <video width="320" height="240" controls="controls" autoplay style="display:block; margin: 0 auto;" c>
+        <source src="mainmovie.mov" type="video/mp4">
+</video>
 
      <a href="cell.html" class="cell">GO TO CELL</a>
      <a href="hell.html" class="hell">GO TO HELL</a>
