--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <marquee behavior="scroll" direction="left" scrollamount="10" class="scroll-text" >For crimes against music and dance.  &nbsp;    &nbsp;      &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;         #sendwillschustertoguantanamobay</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="10" class="scroll-text" >For crimes against music and dance.  &nbsp;    &nbsp;      &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;         #sendwillschuestertoguantanamobay</marquee>
 
-    <h1 class="header"> willschusterwarcriminal.com</h1>
+    <h1 class="header"> willschuesterwarcriminal.com</h1>
 
     <video width="320" height="240" controls="controls" autoplay style="display:block; margin: 0 auto;" c>
         <source src="mainmovie.mov" type="video/mp4">
